@@ -11,9 +11,8 @@ import android.text.method.LinkMovementMethod;
 import android.text.method.MovementMethod;
 import android.text.style.URLSpan;
 import android.text.util.Linkify;
+import android.webkit.WebView;
 import android.widget.TextView;
-import com.baidu.sapi2.utils.SapiUtils;
-import com.baidu.webkit.sdk.WebView;
 import java.io.UnsupportedEncodingException;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
@@ -25,6 +24,7 @@ import java.util.Iterator;
 import java.util.Locale;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import org.apache.http.protocol.HTTP;
 /* loaded from: classes2.dex */
 public final class LinkifyCompat {
     private static final String[] EMPTY_STRING = new String[0];
@@ -64,10 +64,10 @@ public final class LinkifyCompat {
         }
         ArrayList arrayList = new ArrayList();
         if ((i & 1) != 0) {
-            gatherLinks(arrayList, spannable, PatternsCompat.AUTOLINK_WEB_URL, new String[]{"http://", SapiUtils.COOKIE_HTTPS_URL_PREFIX, "rtsp://"}, Linkify.sUrlMatchFilter, null);
+            gatherLinks(arrayList, spannable, PatternsCompat.AUTOLINK_WEB_URL, new String[]{"http://", "https://", "rtsp://"}, Linkify.sUrlMatchFilter, null);
         }
         if ((i & 2) != 0) {
-            gatherLinks(arrayList, spannable, PatternsCompat.AUTOLINK_EMAIL_ADDRESS, new String[]{WebView.SCHEME_MAILTO}, null, null);
+            gatherLinks(arrayList, spannable, PatternsCompat.AUTOLINK_EMAIL_ADDRESS, new String[]{"mailto:"}, null, null);
         }
         if ((i & 8) != 0) {
             gatherMapLinks(arrayList, spannable);
@@ -229,7 +229,7 @@ public final class LinkifyCompat {
         int i = 0;
         while (true) {
             try {
-                String findAddress = android.webkit.WebView.findAddress(obj);
+                String findAddress = WebView.findAddress(obj);
                 if (findAddress != null && (indexOf = obj.indexOf(findAddress)) >= 0) {
                     LinkSpec linkSpec = new LinkSpec();
                     int length = findAddress.length() + indexOf;
@@ -238,7 +238,7 @@ public final class LinkifyCompat {
                     obj = obj.substring(length);
                     i += length;
                     try {
-                        linkSpec.url = WebView.SCHEME_GEO + URLEncoder.encode(findAddress, "UTF-8");
+                        linkSpec.url = "geo:0,0?q=" + URLEncoder.encode(findAddress, HTTP.UTF_8);
                         arrayList.add(linkSpec);
                     } catch (UnsupportedEncodingException e) {
                     }
