@@ -4,12 +4,12 @@ import android.annotation.SuppressLint;
 import android.content.Context;
 import android.content.pm.PackageManager;
 import android.text.TextUtils;
-import com.baidu.ar.constants.HttpConstants;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Iterator;
+import org.apache.http.protocol.HTTP;
 /* loaded from: classes3.dex */
 public final class b {
     public static void a(Context context) {
@@ -41,11 +41,11 @@ public final class b {
     @SuppressLint({"InlinedApi"})
     public static void a(HashMap<String, String> hashMap) {
         long currentTimeMillis = System.currentTimeMillis() / 1000;
-        hashMap.put(HttpConstants.TIMESTAMP, currentTimeMillis + "");
+        hashMap.put("timestamp", currentTimeMillis + "");
         hashMap.put("expires", (86400 + currentTimeMillis) + "");
         hashMap.put("v", "1");
         try {
-            hashMap.put("vcode", com.baidu.android.pushservice.k.f.a(URLEncoder.encode(currentTimeMillis + "bccs", "UTF-8").getBytes(), false));
+            hashMap.put("vcode", com.baidu.android.pushservice.k.f.a(URLEncoder.encode(currentTimeMillis + "bccs", HTTP.UTF_8).getBytes(), false));
         } catch (UnsupportedEncodingException e) {
         }
     }
