@@ -8,16 +8,14 @@ import com.baidu.adp.lib.asyncTask.BdAsyncTask;
 import com.baidu.adp.lib.asyncTask.BdAsyncTaskParallel;
 import com.baidu.adp.lib.util.BdLog;
 import com.baidu.adp.plugin.proxy.ContentProviderProxy;
-import com.baidu.ar.util.IoUtils;
 import com.baidu.tbadk.TbConfig;
 import com.baidu.tbadk.core.TbadkCoreApplication;
 import com.baidu.tbadk.core.util.BitmapHelper;
 import com.baidu.tbadk.core.util.TbErrInfo;
 import com.baidu.tbadk.core.util.TiebaStatic;
-import com.baidu.tbadk.core.util.aq;
 import com.baidu.tbadk.core.util.ar;
-import com.baidu.tieba.e;
-import com.baidu.webkit.internal.ETAG;
+import com.baidu.tbadk.core.util.as;
+import com.baidu.tieba.d;
 import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
@@ -25,7 +23,7 @@ import java.net.URLDecoder;
 public class c implements com.baidu.adp.lib.f.e<com.baidu.adp.widget.ImageView.a> {
     private int procType;
 
-    public int EK() {
+    public int adU() {
         return this.procType;
     }
 
@@ -56,9 +54,9 @@ public class c implements com.baidu.adp.lib.f.e<com.baidu.adp.widget.ImageView.a
         Bitmap Bytes2Bitmap = bArr2 != null ? BitmapHelper.Bytes2Bitmap(bArr2) : null;
         if (Bytes2Bitmap == null) {
             if (booleanValue && str.startsWith("/")) {
-                Bytes2Bitmap = com.baidu.adp.lib.util.d.kE().bh(str);
+                Bytes2Bitmap = com.baidu.adp.lib.util.d.kG().bi(str);
                 if (Bytes2Bitmap != null && bArr2 == null) {
-                    bArr = com.baidu.adp.lib.util.d.kE().Bitmap2Bytes(Bytes2Bitmap, 100);
+                    bArr = com.baidu.adp.lib.util.d.kG().Bitmap2Bytes(Bytes2Bitmap, 100);
                 }
             } else {
                 bArr = a(str, aVar);
@@ -67,7 +65,7 @@ public class c implements com.baidu.adp.lib.f.e<com.baidu.adp.widget.ImageView.a
                 }
             }
             if (Bytes2Bitmap == null) {
-                return new com.baidu.adp.widget.ImageView.a(Bytes2Bitmap, com.baidu.adp.lib.util.l.r(bArr), str2, bArr);
+                return new com.baidu.adp.widget.ImageView.a(Bytes2Bitmap, com.baidu.adp.lib.util.l.s(bArr), str2, bArr);
             }
             return null;
         }
@@ -89,7 +87,7 @@ public class c implements com.baidu.adp.lib.f.e<com.baidu.adp.widget.ImageView.a
             return null;
         }
         boolean booleanValue = (str == null || !str.startsWith("width=")) ? Boolean.valueOf(String.valueOf(objArr[2])).booleanValue() : false;
-        String str4 = booleanValue ? str : TbConfig.IMAGE_ADDRESS + ((str + "&imgtype=0") + "&qulity=" + aq.Ee().Ej());
+        String str4 = booleanValue ? str : TbConfig.IMAGE_ADDRESS + ((str + "&imgtype=0") + "&qulity=" + ar.adp().adu());
         if (!(TbadkCoreApplication.getInst().getCapabilityOfWebp() && com.baidu.adp.lib.b.d.iQ().aO("webp_enable") == 1) || str4.indexOf("hiphotos.baidu.com") <= 0 || (lastIndexOf = str4.lastIndexOf(".jpg")) <= 0) {
             z = false;
             str3 = str4;
@@ -99,47 +97,47 @@ public class c implements com.baidu.adp.lib.f.e<com.baidu.adp.widget.ImageView.a
         }
         com.baidu.tbadk.core.util.a.i iVar = new com.baidu.tbadk.core.util.a.i();
         if (aVar != null) {
-            aVar.Dw = iVar;
+            aVar.Dv = iVar;
         }
-        byte[] r = iVar.r(str3, !booleanValue);
-        if (iVar.EC() && iVar.errorCode == -11) {
+        byte[] K = iVar.K(str3, !booleanValue);
+        if (iVar.adN() && iVar.errorCode == -11) {
             BdLog.e("BIGIMAGE imagesize too big");
             com.baidu.tbadk.core.d.a.a("gifplay", -1L, -1, "BigImageLoaderProc.getFromRemote", iVar.errorCode, "image size too large", "url", str3);
         }
-        if (iVar.responseCode == 302 && (17 == EK() || 18 == EK() || 13 == EK() || 14 == EK())) {
+        if (iVar.responseCode == 302 && (17 == adU() || 18 == adU() || 13 == adU() || 14 == adU())) {
             try {
-                InputStream openRawResource = TbadkCoreApplication.getInst().getResources().openRawResource(e.f.img_default_delete_big2, new TypedValue());
-                bArr = com.baidu.adp.lib.network.a.b.g(openRawResource);
-                com.baidu.adp.lib.g.a.h(openRawResource);
+                InputStream openRawResource = TbadkCoreApplication.getInst().getResources().openRawResource(d.f.img_default_delete_big2, new TypedValue());
+                bArr = com.baidu.adp.lib.network.a.b.h(openRawResource);
+                com.baidu.adp.lib.g.a.i(openRawResource);
             } catch (Throwable th) {
                 BdLog.e(th);
                 return null;
             }
         } else {
-            bArr = r;
+            bArr = K;
         }
-        if (!iVar.EC() && iVar.responseCode != 302) {
+        if (!iVar.adN() && iVar.responseCode != 302) {
             bitmap = null;
         } else {
             Bitmap Bytes2Bitmap = BitmapHelper.Bytes2Bitmap(bArr);
             if (z && Bytes2Bitmap == null) {
                 TiebaStatic.imgError(TbErrInfo.ERR_IMG_DECODE_WEBP, "Webp decoding failed.", str3);
                 TbadkCoreApplication.getInst().incWebpFailureCount();
-                bArr = iVar.r(str4, !booleanValue);
-                if (bArr != null && iVar.EC()) {
+                bArr = iVar.K(str4, !booleanValue);
+                if (bArr != null && iVar.adN()) {
                     bitmap = BitmapHelper.Bytes2Bitmap(bArr);
                 }
             }
             bitmap = Bytes2Bitmap;
         }
-        if (!iVar.aEK) {
+        if (!iVar.bME) {
             a(str, bArr, false, aVar);
         }
-        return new com.baidu.adp.widget.ImageView.a(bitmap, com.baidu.adp.lib.util.l.r(bArr), str, bArr);
+        return new com.baidu.adp.widget.ImageView.a(bitmap, com.baidu.adp.lib.util.l.s(bArr), str, bArr);
     }
 
     @Override // com.baidu.adp.lib.f.e
-    public boolean jD() {
+    public boolean jE() {
         return true;
     }
 
@@ -147,46 +145,56 @@ public class c implements com.baidu.adp.lib.f.e<com.baidu.adp.widget.ImageView.a
     public void a(String str, Object obj, int i, int i2, Object... objArr) {
     }
 
-    public static void a(String str, byte[] bArr, boolean z, com.baidu.adp.lib.f.a aVar) {
-        String gq = gq(str);
-        com.baidu.adp.lib.Disk.ops.c cVar = new com.baidu.adp.lib.Disk.ops.c(TbConfig.IMAGE_CACHE_DIR_NAME, ar.fY(gq == null ? str : gq), DiskFileOperate.Action.WRITE_FORCE);
+    @Override // com.baidu.adp.lib.f.e
+    public BdAsyncTaskParallel jF() {
+        return null;
+    }
+
+    @Override // com.baidu.adp.lib.f.e
+    public int jG() {
+        return 1;
+    }
+
+    private static com.baidu.adp.lib.Disk.ops.c a(String str, DiskFileOperate.Action action) {
+        com.baidu.adp.lib.Disk.ops.c cVar = new com.baidu.adp.lib.Disk.ops.c(TbConfig.IMAGE_CACHE_DIR_NAME, str, action);
         cVar.a(DiskFileOperate.OperateType.TRY_SUCCESS);
         cVar.R(true);
-        cVar.W(z);
         cVar.T(false);
         cVar.U(true);
-        if (gq != null) {
-            cVar.X(gr(str));
+        return cVar;
+    }
+
+    public static void a(String str, byte[] bArr, boolean z, com.baidu.adp.lib.f.a aVar) {
+        String nc = nc(str);
+        com.baidu.adp.lib.Disk.ops.c a = a(mK(str), DiskFileOperate.Action.WRITE_FORCE);
+        a.W(z);
+        if (nc != null) {
+            a.X(nd(str));
         } else {
-            cVar.X(true);
+            a.X(true);
         }
-        cVar.setData(bArr);
+        a.setData(bArr);
         if (aVar != null) {
             e eVar = new e();
-            eVar.f(cVar);
-            aVar.Dw = eVar;
+            eVar.f(a);
+            aVar.Dv = eVar;
         }
-        com.baidu.adp.lib.Disk.d.hB().c(cVar);
+        com.baidu.adp.lib.Disk.d.hz().c(a);
     }
 
     public static byte[] a(String str, com.baidu.adp.lib.f.a aVar) {
-        String gq = gq(str);
+        String nc = nc(str);
         byte[] bArr = new byte[0];
-        com.baidu.adp.lib.Disk.ops.c cVar = new com.baidu.adp.lib.Disk.ops.c(TbConfig.IMAGE_CACHE_DIR_NAME, ar.fY(gq == null ? str : gq), DiskFileOperate.Action.READ);
-        cVar.a(DiskFileOperate.OperateType.TRY_SUCCESS);
-        cVar.R(true);
-        cVar.S(true);
-        cVar.T(false);
-        cVar.U(true);
-        cVar.q(bArr);
+        com.baidu.adp.lib.Disk.ops.c a = a(mK(str), DiskFileOperate.Action.READ);
+        a.q((Object) bArr);
         if (aVar != null) {
             e eVar = new e();
-            eVar.f(cVar);
-            aVar.Dw = eVar;
+            eVar.f(a);
+            aVar.Dv = eVar;
         }
-        if (com.baidu.adp.lib.Disk.d.hB().c(cVar)) {
+        if (com.baidu.adp.lib.Disk.d.hz().c(a)) {
             int i = 2000;
-            if (com.baidu.adp.lib.util.j.kW()) {
+            if (com.baidu.adp.lib.util.j.kZ()) {
                 i = 500;
             }
             synchronized (bArr) {
@@ -196,9 +204,9 @@ public class c implements com.baidu.adp.lib.f.e<com.baidu.adp.widget.ImageView.a
                     e.printStackTrace();
                 }
             }
-            if (cVar.isSuccess()) {
-                if (gq == null || cVar.hW() || !gr(str)) {
-                    return cVar.hX();
+            if (a.isSuccess()) {
+                if (nc == null || a.hV() || !nd(str)) {
+                    return a.hW();
                 }
                 return null;
             }
@@ -207,39 +215,28 @@ public class c implements com.baidu.adp.lib.f.e<com.baidu.adp.widget.ImageView.a
         return null;
     }
 
-    public static boolean gp(String str) {
-        String gq = gq(str);
-        if (gq != null) {
-            str = gq;
+    public static String mK(String str) {
+        String nc = nc(str);
+        if (nc != null) {
+            str = nc;
         }
-        String fY = ar.fY(str);
-        if (TextUtils.isEmpty(fY)) {
+        return as.mK(str);
+    }
+
+    public static boolean nb(String str) {
+        String mK = mK(str);
+        if (TextUtils.isEmpty(mK)) {
             return false;
         }
-        com.baidu.adp.lib.Disk.ops.c cVar = new com.baidu.adp.lib.Disk.ops.c(TbConfig.IMAGE_CACHE_DIR_NAME, fY, DiskFileOperate.Action.INFO);
-        cVar.a(DiskFileOperate.OperateType.TRY_SUCCESS);
-        cVar.R(true);
-        cVar.T(false);
-        cVar.U(true);
-        return cVar.hC();
+        return a(mK, DiskFileOperate.Action.INFO).hA();
     }
 
-    @Override // com.baidu.adp.lib.f.e
-    public BdAsyncTaskParallel jE() {
-        return null;
-    }
-
-    @Override // com.baidu.adp.lib.f.e
-    public int jF() {
-        return 1;
-    }
-
-    private static String gq(String str) {
+    private static String nc(String str) {
         int i;
         if (str == null) {
             return null;
         }
-        if (com.baidu.tbadk.util.i.iQ(str)) {
+        if (com.baidu.tbadk.util.l.pG(str)) {
             int lastIndexOf = str.lastIndexOf("/");
             int lastIndexOf2 = str.lastIndexOf(".");
             int lastIndexOf3 = str.lastIndexOf(".jpg");
@@ -262,16 +259,16 @@ public class c implements com.baidu.adp.lib.f.e<com.baidu.adp.widget.ImageView.a
         return null;
     }
 
-    private static boolean gr(String str) {
+    private static boolean nd(String str) {
         String[] split;
-        if (str != null && com.baidu.tbadk.util.i.iQ(str)) {
+        if (str != null && com.baidu.tbadk.util.l.pG(str)) {
             String[] split2 = str.split("/");
             if (split2.length > 3) {
                 try {
-                    String[] split3 = URLDecoder.decode(split2[split2.length - 3], IoUtils.UTF_8).split(ContentProviderProxy.PROVIDER_AUTHOR_SEPARATOR);
+                    String[] split3 = URLDecoder.decode(split2[split2.length - 3], "utf-8").split(ContentProviderProxy.PROVIDER_AUTHOR_SEPARATOR);
                     for (String str2 : split3) {
                         if (str2.startsWith("q")) {
-                            if (Integer.valueOf(str2.split(ETAG.EQUAL)[split.length - 1]).intValue() <= 50) {
+                            if (Integer.valueOf(str2.split("=")[split.length - 1]).intValue() <= 50) {
                                 return false;
                             }
                         }
