@@ -14,7 +14,6 @@ import com.baidu.adp.framework.message.CustomMessage;
 import com.baidu.adp.framework.message.CustomResponsedMessage;
 import com.baidu.adp.lib.util.BdLog;
 import com.baidu.adp.lib.util.StringUtils;
-import com.baidu.sapi2.utils.SapiUtils;
 import com.baidu.tbadk.TbConfig;
 import com.baidu.tbadk.core.TbadkCoreApplication;
 import com.baidu.tbadk.core.atomData.AlbumActivityConfig;
@@ -27,17 +26,17 @@ import com.baidu.tbadk.core.atomData.PersonInfoActivityConfig;
 import com.baidu.tbadk.core.frameworkData.IntentConfig;
 import com.baidu.tbadk.core.util.TiebaStatic;
 import com.baidu.tbadk.core.util.UtilHelper;
-import com.baidu.tbadk.util.ac;
-import com.baidu.tieba.e;
+import com.baidu.tbadk.util.ae;
+import com.baidu.tieba.d;
 import com.baidu.tieba.recapp.h;
-import com.baidu.webkit.internal.GlobalConstants;
-import com.baidu.webkit.sdk.WebView;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import org.apache.http.cookie.ClientCookie;
+import org.apache.http.protocol.HTTP;
 /* loaded from: classes3.dex */
 public class AdStatic {
-    public static boolean anc = true;
+    public static boolean btI = true;
 
     static {
         MessageManager.getInstance().registerListener(2005016, new CustomMessageListener(0) { // from class: com.baidu.tieba.ad.browser.AdStatic.1
@@ -45,11 +44,11 @@ public class AdStatic {
             @Override // com.baidu.adp.framework.listener.MessageListener
             public void onMessage(CustomResponsedMessage<?> customResponsedMessage) {
                 if (customResponsedMessage != null && customResponsedMessage.getCmd() == 2005016 && customResponsedMessage.getData() != null) {
-                    e.br(TbadkCoreApplication.getInst());
+                    e.cF(TbadkCoreApplication.getInst());
                 }
             }
         });
-        com.baidu.tieba.ad.a.WE().a(new h.c() { // from class: com.baidu.tieba.ad.browser.AdStatic.2
+        com.baidu.tieba.ad.a.awE().a(new h.c() { // from class: com.baidu.tieba.ad.browser.AdStatic.2
             @Override // com.baidu.tieba.recapp.h.c
             public int b(Context context, String str, String str2, boolean z, h.d dVar, boolean z2) {
                 if (z2) {
@@ -61,16 +60,16 @@ public class AdStatic {
             }
         });
         com.baidu.adp.lib.b.d.iQ().a(new com.baidu.adp.lib.b.b("switch_mbaidu_startup", 1, null));
-        xd();
-        xe();
-        xf();
+        VK();
+        VL();
+        VM();
     }
 
-    private static void xd() {
-        com.baidu.tieba.ad.a.WE().a(new h.a() { // from class: com.baidu.tieba.ad.browser.AdStatic.3
+    private static void VK() {
+        com.baidu.tieba.ad.a.awE().a(new h.a() { // from class: com.baidu.tieba.ad.browser.AdStatic.3
             @Override // com.baidu.tieba.recapp.h.a
             public int e(Context context, String[] strArr) {
-                Bundle jg;
+                Bundle pR;
                 if (context == null || strArr == null || strArr.length == 0) {
                     return 3;
                 }
@@ -81,26 +80,26 @@ public class AdStatic {
                 str.toLowerCase();
                 String str2 = strArr.length > 2 ? strArr[2] : null;
                 String str3 = strArr.length > 1 ? strArr[1] : null;
-                if (str.startsWith(WebView.SCHEME_TEL)) {
+                if (str.startsWith("tel:")) {
                     UtilHelper.callPhone(context, str.substring(4));
                     return 0;
                 } else if (str.startsWith("sms:")) {
                     String substring = str.substring(4);
                     String str4 = "";
                     if (str.contains("body=")) {
-                        str4 = ac.aP(str, "body=");
+                        str4 = ae.bU(str, "body=");
                         substring = substring.substring(0, substring.indexOf("?") - 1);
                     }
                     UtilHelper.smsTo(context, substring, str4);
                     return 0;
                 } else if (str.contains("jump=outer")) {
-                    e.ag(context, str);
+                    e.at(context, str);
                     return 1;
                 } else if (str.contains("jump=finish_this_page") && (context instanceof Activity)) {
                     ((Activity) context).finish();
                     return 1;
                 } else if (str.contains(TbConfig.WEB_VIEW_JUMP2NATIVE) && str.contains("pay=1") && (context instanceof Activity)) {
-                    UtilHelper.showToast(context, e.j.buy_sucess);
+                    UtilHelper.showToast(context, d.j.buy_sucess);
                     ((Activity) context).finish();
                     return 0;
                 } else if (str.startsWith("tieba://focusforum")) {
@@ -114,23 +113,23 @@ public class AdStatic {
                     context.startActivity(intent);
                     return 0;
                 } else if (str.contains(TbConfig.WEB_VIEW_JUMP2NATIVE) && str.contains("bunding_phone=1")) {
-                    MessageManager.getInstance().dispatchResponsedMessageToUI(new CustomResponsedMessage(2001359, ac.aP(str, "bindid=")));
+                    MessageManager.getInstance().dispatchResponsedMessageToUI(new CustomResponsedMessage(2001359, ae.bU(str, "bindid=")));
                     if (context instanceof Activity) {
                         ((Activity) context).finish();
                     }
                     return 1;
-                } else if (str.contains(TbConfig.WEB_VIEW_JUMP2NATIVE) && str.contains("/changeyinjisuccess") && (jg = ac.jg(str)) != null && "/changeyinjisuccess".equalsIgnoreCase(jg.getString("path"))) {
+                } else if (str.contains(TbConfig.WEB_VIEW_JUMP2NATIVE) && str.contains("/changeyinjisuccess") && (pR = ae.pR(str)) != null && "/changeyinjisuccess".equalsIgnoreCase(pR.getString(ClientCookie.PATH_ATTR))) {
                     MessageManager.getInstance().dispatchResponsedMessageToUI(new CustomResponsedMessage(2001372));
                     return 0;
                 } else {
                     if (str.startsWith("opfeature:")) {
-                        AdStatic.c(context, e.al(str.replaceFirst("opfeature:", ""), str2), null, false, true, true, true);
+                        AdStatic.c(context, e.bs(str.replaceFirst("opfeature:", ""), str2), null, false, true, true, true);
                     } else if (str.startsWith("web:")) {
-                        AdStatic.c(context, e.al(str.replaceFirst("web:", ""), str2), null, false, true, true, true);
+                        AdStatic.c(context, e.bs(str.replaceFirst("web:", ""), str2), null, false, true, true, true);
                     } else if (str.startsWith("topic:")) {
                         AdStatic.c(context, str3, str.substring(6), false, true, true, false);
                     } else if (str.startsWith("zb:")) {
-                        AdStatic.c(context, str.substring(3), context.getString(e.j.photo_live_tips), false, true, false, false);
+                        AdStatic.c(context, str.substring(3), context.getString(d.j.photo_live_tips), false, true, false, false);
                     } else if (!str.startsWith("list:")) {
                         return 3;
                     } else {
@@ -145,7 +144,7 @@ public class AdStatic {
         });
     }
 
-    private static String kg(String str) {
+    private static String qR(String str) {
         String str2;
         if (TextUtils.isEmpty(str)) {
             return "";
@@ -163,7 +162,7 @@ public class AdStatic {
             }
             if (!TextUtils.isEmpty(str2)) {
                 try {
-                    return URLDecoder.decode(str2, "UTF-8");
+                    return URLDecoder.decode(str2, HTTP.UTF_8);
                 } catch (UnsupportedEncodingException e) {
                     e.printStackTrace();
                     return str;
@@ -174,7 +173,7 @@ public class AdStatic {
         return str;
     }
 
-    private static String dY(String str) {
+    private static String kH(String str) {
         if (StringUtils.isNull(str)) {
             return "";
         }
@@ -185,19 +184,19 @@ public class AdStatic {
             return str;
         }
         if (!str.startsWith(checkUrl)) {
-            return checkUrl + dZ(str);
+            return checkUrl + kI(str);
         }
         return str;
     }
 
-    public static String dZ(String str) {
+    public static String kI(String str) {
         if (TextUtils.isEmpty(str)) {
             return "";
         }
         try {
-            String str2 = new String(str.getBytes(), "UTF-8");
+            String str2 = new String(str.getBytes(), HTTP.UTF_8);
             try {
-                return URLEncoder.encode(str2, "UTF-8");
+                return URLEncoder.encode(str2, HTTP.UTF_8);
             } catch (Exception e) {
                 return str2;
             }
@@ -209,8 +208,8 @@ public class AdStatic {
     /* JADX INFO: Access modifiers changed from: private */
     public static void a(Context context, String str, String str2, boolean z, boolean z2, boolean z3, boolean z4) {
         TiebaStatic.eventStat(context, "url_1", null);
-        String kg = kg(str);
-        if (!kh(kg) && WF() && kj(GlobalConstants.SEARCHBOX_PACKAGE_NAME) && ki(kg) && anc) {
+        String qR = qR(str);
+        if (!qS(qR) && awF() && jh("com.baidu.searchbox") && qT(qR) && btI) {
             TiebaStatic.eventStat(context, "url_2", null);
             b(context, str, str2, z, z2, z3, z4);
             return;
@@ -218,19 +217,19 @@ public class AdStatic {
         c(context, str, str2, z, z2, z3, z4);
     }
 
-    private static boolean kh(String str) {
+    private static boolean qS(String str) {
         return str != null;
     }
 
-    private static boolean WF() {
+    private static boolean awF() {
         return com.baidu.adp.lib.b.d.iQ().aO("switch_mbaidu_startup") == 1;
     }
 
-    private static boolean ki(String str) {
-        return str.startsWith("http://") || str.startsWith(SapiUtils.COOKIE_HTTPS_URL_PREFIX) || !str.contains("://");
+    private static boolean qT(String str) {
+        return str.startsWith("http://") || str.startsWith("https://") || !str.contains("://");
     }
 
-    private static boolean kj(String str) {
+    private static boolean jh(String str) {
         try {
             PackageInfo packageInfo = TbadkCoreApplication.getInst().getPackageManager().getPackageInfo(str, 1);
             if (packageInfo == null) {
@@ -243,12 +242,12 @@ public class AdStatic {
     }
 
     private static void b(Context context, String str, String str2, boolean z, boolean z2, boolean z3, boolean z4) {
-        String al = e.al(str, null);
+        String bs = e.bs(str, null);
         Intent intent = new Intent();
         intent.setAction("com.baidu.searchbox.action.VIEW");
         intent.addCategory("android.intent.category.DEFAULT");
         intent.addFlags(268435456);
-        intent.setData(Uri.parse(al));
+        intent.setData(Uri.parse(bs));
         intent.putExtra("EXTRA_URL_NEW_WINDOW", true);
         try {
             TbadkCoreApplication.getInst().startActivity(intent);
@@ -261,11 +260,11 @@ public class AdStatic {
 
     /* JADX INFO: Access modifiers changed from: private */
     public static void c(Context context, String str, String str2, boolean z, boolean z2, boolean z3, boolean z4) {
-        e.b(context, false, dY(str), str2);
+        e.b(context, false, kH(str), str2);
     }
 
-    private static void xe() {
-        com.baidu.tieba.ad.a.WE().a(new h.a() { // from class: com.baidu.tieba.ad.browser.AdStatic.4
+    private static void VL() {
+        com.baidu.tieba.ad.a.awE().a(new h.a() { // from class: com.baidu.tieba.ad.browser.AdStatic.4
             @Override // com.baidu.tieba.recapp.h.a
             public int e(Context context, String[] strArr) {
                 if (strArr == null || strArr[0] == null) {
@@ -301,7 +300,9 @@ public class AdStatic {
                     if (queryParameter4 == null || queryParameter4.length() <= 0) {
                         return 3;
                     }
-                    MessageManager.getInstance().sendMessage(new CustomMessage(2003000, new FrsActivityConfig(context).createNormalCfg(queryParameter4, "lego")));
+                    FrsActivityConfig createNormalCfg = new FrsActivityConfig(context).createNormalCfg(queryParameter4, "lego");
+                    createNormalCfg.setCallFrom(12);
+                    MessageManager.getInstance().sendMessage(new CustomMessage(2003000, createNormalCfg));
                     return 0;
                 } else if (AlbumActivityConfig.FROM_PERSON.equalsIgnoreCase(parse.getAuthority())) {
                     String queryParameter5 = parse.getQueryParameter("uid");
@@ -312,7 +313,7 @@ public class AdStatic {
                     MessageManager.getInstance().sendMessage(new CustomMessage(2002003, new PersonInfoActivityConfig(context, queryParameter5, queryParameter6)));
                     return 0;
                 } else if ("topic".equalsIgnoreCase(parse.getAuthority())) {
-                    String queryParameter7 = parse.getQueryParameter(IntentConfig.TOPIC_ID);
+                    String queryParameter7 = parse.getQueryParameter("topic_id");
                     String queryParameter8 = parse.getQueryParameter(IntentConfig.TOPIC_NAME);
                     if (queryParameter7 != null && queryParameter8 != null) {
                         HotTopicActivityConfig hotTopicActivityConfig = new HotTopicActivityConfig(context);
@@ -334,8 +335,8 @@ public class AdStatic {
         });
     }
 
-    private static void xf() {
-        com.baidu.tieba.ad.a.WE().a(new h.a() { // from class: com.baidu.tieba.ad.browser.AdStatic.5
+    private static void VM() {
+        com.baidu.tieba.ad.a.awE().a(new h.a() { // from class: com.baidu.tieba.ad.browser.AdStatic.5
             @Override // com.baidu.tieba.recapp.h.a
             public int e(Context context, String[] strArr) {
                 if (strArr == null || strArr[0] == null) {
@@ -379,8 +380,8 @@ public class AdStatic {
         }
         String queryParameter = uri.getQueryParameter("page_type");
         String queryParameter2 = uri.getQueryParameter(LegoListActivityConfig.ITEM_ID);
-        String queryParameter3 = uri.getQueryParameter("rn");
-        String queryParameter4 = uri.getQueryParameter("params");
+        String queryParameter3 = uri.getQueryParameter(LegoListActivityConfig.RN);
+        String queryParameter4 = uri.getQueryParameter(LegoListActivityConfig.PARAMS);
         String queryParameter5 = uri.getQueryParameter(LegoListActivityConfig.PRE_LOAD);
         String queryParameter6 = uri.getQueryParameter(LegoListActivityConfig.NEXT_PAGE);
         String queryParameter7 = uri.getQueryParameter("lego_version");
@@ -389,7 +390,7 @@ public class AdStatic {
         String queryParameter10 = uri.getQueryParameter(LegoListActivityConfig.IS_LANDINGPAGE);
         String queryParameter11 = uri.getQueryParameter("source");
         String str3 = TextUtils.isEmpty(queryParameter11) ? "unknown" : queryParameter11;
-        if ((!z || ea(queryParameter7)) && str != null && queryParameter != null && str.length() > 0 && queryParameter.length() > 0) {
+        if ((!z || kJ(queryParameter7)) && str != null && queryParameter != null && str.length() > 0 && queryParameter.length() > 0) {
             try {
                 int parseInt = Integer.parseInt(queryParameter);
                 try {
@@ -433,7 +434,7 @@ public class AdStatic {
         return false;
     }
 
-    private static boolean ea(String str) {
+    private static boolean kJ(String str) {
         if (TextUtils.isEmpty(str)) {
             str = "1.0.0";
         }
