@@ -4,17 +4,18 @@ import android.content.Context;
 import android.text.TextUtils;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import org.apache.http.protocol.HTTP;
 /* loaded from: classes3.dex */
 public class g {
-    public static void ay(Context context, String str) {
+    public static void aM(Context context, String str) {
         String format;
         if (!TextUtils.isEmpty(str)) {
             try {
-                format = String.format("http://graph.baidu.com/details?image=%s&carousel=0&tn=tieba&promotion_name=shitu", URLEncoder.encode(str, "UTF-8"));
+                format = String.format("http://graph.baidu.com/details?image=%s&carousel=0&tn=tieba&promotion_name=shitu", URLEncoder.encode(str, HTTP.UTF_8));
             } catch (UnsupportedEncodingException e) {
                 format = String.format("http://graph.baidu.com/details?image=%s&carousel=0&tn=tieba&promotion_name=shitu", str);
             }
-            com.baidu.tbadk.browser.a.ad(context, format);
+            com.baidu.tbadk.browser.a.ar(context, format);
         }
     }
 }
