@@ -11,18 +11,19 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
-/* loaded from: classes6.dex */
+import org.apache.http.protocol.HTTP;
+/* loaded from: classes3.dex */
 public class a {
     protected HashMap<String, b> a = new HashMap<>();
 
     /* renamed from: com.tencent.open.a$a  reason: collision with other inner class name */
-    /* loaded from: classes6.dex */
-    public static class C0381a {
+    /* loaded from: classes3.dex */
+    public static class C0357a {
         protected WeakReference<WebView> a;
         protected long b;
         protected String c;
 
-        public C0381a(WebView webView, long j, String str) {
+        public C0357a(WebView webView, long j, String str) {
             this.a = new WeakReference<>(webView);
             this.b = j;
             this.c = str;
@@ -58,9 +59,9 @@ public class a {
         }
     }
 
-    /* loaded from: classes6.dex */
+    /* loaded from: classes3.dex */
     public static class b {
-        public void call(String str, List<String> list, C0381a c0381a) {
+        public void call(String str, List<String> list, C0357a c0357a) {
             Object invoke;
             Method[] declaredMethods = getClass().getDeclaredMethods();
             Method method = null;
@@ -79,8 +80,8 @@ public class a {
                     i++;
                 } catch (Exception e) {
                     f.b("openSDK_LOG.JsBridge", "-->handler call mehtod ex. targetMethod: " + ((Object) null), e);
-                    if (c0381a != null) {
-                        c0381a.a();
+                    if (c0357a != null) {
+                        c0357a.a();
                         return;
                     }
                     return;
@@ -113,14 +114,14 @@ public class a {
                 Class<?> returnType = method.getReturnType();
                 f.b("openSDK_LOG.JsBridge", "-->call, result: " + invoke + " | ReturnType: " + returnType.getName());
                 if ("void".equals(returnType.getName()) || returnType == Void.class) {
-                    if (c0381a != null) {
-                        c0381a.a((Object) null);
+                    if (c0357a != null) {
+                        c0357a.a((Object) null);
                     }
-                } else if (c0381a != null && customCallback()) {
-                    c0381a.a(invoke != null ? invoke.toString() : null);
+                } else if (c0357a != null && customCallback()) {
+                    c0357a.a(invoke != null ? invoke.toString() : null);
                 }
-            } else if (c0381a != null) {
-                c0381a.a();
+            } else if (c0357a != null) {
+                c0357a.a();
             }
         }
 
@@ -133,12 +134,12 @@ public class a {
         this.a.put(str, bVar);
     }
 
-    public void a(String str, String str2, List<String> list, C0381a c0381a) {
+    public void a(String str, String str2, List<String> list, C0357a c0357a) {
         f.a("openSDK_LOG.JsBridge", "getResult---objName = " + str + " methodName = " + str2);
         int size = list.size();
         for (int i = 0; i < size; i++) {
             try {
-                list.set(i, URLDecoder.decode(list.get(i), "UTF-8"));
+                list.set(i, URLDecoder.decode(list.get(i), HTTP.UTF_8));
             } catch (UnsupportedEncodingException e) {
                 e.printStackTrace();
             }
@@ -146,12 +147,12 @@ public class a {
         b bVar = this.a.get(str);
         if (bVar != null) {
             f.b("openSDK_LOG.JsBridge", "call----");
-            bVar.call(str2, list, c0381a);
+            bVar.call(str2, list, c0357a);
             return;
         }
         f.b("openSDK_LOG.JsBridge", "not call----objName NOT FIND");
-        if (c0381a != null) {
-            c0381a.a();
+        if (c0357a != null) {
+            c0357a.a();
         }
     }
 
@@ -161,9 +162,9 @@ public class a {
             ArrayList arrayList = new ArrayList(Arrays.asList((str + "/#").split("/")));
             if (arrayList.size() >= 6) {
                 List<String> subList = arrayList.subList(4, arrayList.size() - 1);
-                C0381a c0381a = new C0381a(webView, 4L, str);
+                C0357a c0357a = new C0357a(webView, 4L, str);
                 webView.getUrl();
-                a((String) arrayList.get(2), (String) arrayList.get(3), subList, c0381a);
+                a((String) arrayList.get(2), (String) arrayList.get(3), subList, c0357a);
                 return true;
             }
             return false;
